TestSuite/errors/err0448.pas
//!Неожиданный символ '^'
begin
  var p: pointer;
  (^integer(p)).print;  
end.